--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jszip": "^3.10.1",
     "lop": "^0.4.2",
     "path-is-absolute": "^1.0.0",
+    "playwright": "^1.55.0",
     "shell-quote": "^1.8.3",
     "underscore": "^1.13.7",
     "xml2js": "^0.6.2",
