Update development environment configuration
- Add Claude agents for AI transformation and git expertise
- Update .gitignore to exclude local settings and test outputs
- Improve development workflow with specialized agent configurations

This enhances the development environment with expert-level guidance
for complex AI implementations and version control operations.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@
 /static/jszip
 /mammoth.browser.js
 /mammoth.browser.min.js
+
+# Claude Code local settings (user-specific)
+.claude/settings.local.json
+
+# Test output files
+*-output.html
+test-*-output.html
+
+# Development utilities (if they generate temp files)
+temp/
+*.tmp
