Reorganize project structure for better maintainability
- Move test scripts to tools/test-scripts/
- Move converters to tools/converters/
- Move processors to tools/processors/
- Move documentation reports to docs/reports/
- Move sample outputs to examples/outputs/
- Update .gitignore for new structure
- Add tools/README.md for documentation

This keeps the root directory cleaner and groups related files together.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ test-*-output.html
 # Development utilities (if they generate temp files)
 temp/
 *.tmp
+
+# Archive and backup directories
+archive/
+backup/
+
+# Generated outputs in examples
+examples/outputs/*.html
+
+# Temporary development files in tools
+tools/**/*.tmp
+tools/**/*-output.*
